# chatgpt-on-wechat

./: pyproject.toml
bot/chatgpt/: chat_gpt_bot.py
channel/wechat/: wechat_channel.py
