[tool.poetry]
name = "chatgpt-on-wechat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatgpt_on_wechat"}]

[tool.poetry.dependencies]
python = "^3.10"
itchat-uos = "1.5.0.dev0"
revchatgpt = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
